/**
 * Copyright (c) 2024 Peking University and Peking University
 * Changsha Institute for Computing and Digital Economy
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package crane.grpc;
option go_package = "CraneNetWeak/generated/protos";

message Empty {}
message NetWeakStartRequest {
  repeated string node_list = 1;
  string option = 2;
}

message NetWeakStartReply {
  bool ok = 1;
  string msg = 2;
}

message NetWeakStopReply {
  bool ok = 1;
  string msg = 2;
}

service CraneTest {
  rpc NetWeakStart (NetWeakStartRequest) returns (NetWeakStartReply);
  rpc NetWeakStop (Empty) returns (NetWeakStopReply);
}